<resources>
    <string name="app_name">UNotes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_descr_welcome">С помощью данного веб-сервиса, вы сможете получить только проверенную сообществом информацию, по любому вопросу</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="enter_username">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_mail">Введите почту</string>
    <string name="next">Далее</string>
    <string name="welcome_to_UNotes">Добро пожаловать в UNotes</string>
    <string name="rules">Вы даете согласие на обработку персональных данных и соглашаетесь с условиями политики конфиденциальности приложения</string>
    <string name="personal_data">обработку персональных данных</string>
    <string name="privacy_policy">политики конфиденциальности</string>
    <string name="what_do_you_do">Чем вы занимаетесь?</string>
    <string name="information">Информация</string>
    <string name="photo_profile">Фото профиля</string>
    <string name="about_self">Расскажите о себе</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="account_success_create">Аккаунт успешно создан</string>
    <string name="account_success_confirm">Аккаунт успешно подтвержден</string>
    <string name="descr_account_create">Для подтверждения учетной записи перейдите по ссылке, высланной вам на почту</string>
    <string name="descr_mail_confirm">Для начала использования приложения, войдите в аккаунт</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="you_ready_delete_comment">Вы уверены, что хотите удалить комментарий?</string>
    <string name="filters">Фильтры</string>
    <string name="new_notes">Новые заметки</string>
    <string name="best_notes">Популярные заметки</string>
    <string name="most_speake_notes">Обсуждаемые заметки</string>
    <string name="report">Пожаловаться</string>
    <string name="type_report">Тип нарушения</string>
    <string name="Note">Заметка</string>
    <string name="notes_in">Заметки - </string>
    <string name="confirm_password">Подтвердите пароль</string>
</resources>