<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background_splash"
    tools:context=".presentation.splash.WelcomeFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome_to_unotes"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome_to_unotes"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_to_unotes" />

    <TextView
        android:id="@+id/tv_welcome_to_unotes"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/ssp_semibold"
        android:gravity="center"
        android:text="@string/welcome_to_UNotes"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_descr_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_descr_welcome"
        android:text="@string/tv_descr_welcome"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/ssp_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/button_fill"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/tv_descr_welcome"
        app:layout_constraintStart_toStartOf="@+id/tv_descr_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_descr_welcome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registration"
        style="@style/button_empty"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@+id/tv_descr_welcome"
        app:layout_constraintStart_toStartOf="@+id/tv_descr_welcome"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>