<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_border">

    <TextView
        android:id="@+id/tv_delete_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ssp_semibold"
        android:gravity="center"
        android:text="@string/filters"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/secondary_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_notes"
        style="@style/ButtonActive"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/new_notes"
        app:layout_constraintEnd_toEndOf="@+id/tv_delete_account"
        app:layout_constraintStart_toStartOf="@+id/tv_delete_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_account" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_best_notes"
        style="@style/ButtonDisactive"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/best_notes"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_notes"
        app:layout_constraintStart_toStartOf="@+id/btn_new_notes"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_notes" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_most_speake_notes"
        style="@style/ButtonDisactive"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/most_speake_notes"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_notes"
        app:layout_constraintStart_toStartOf="@+id/btn_new_notes"
        app:layout_constraintTop_toBottomOf="@+id/btn_best_notes" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        style="@style/button_fill"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:text="Применить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_most_speake_notes"
        app:layout_constraintStart_toStartOf="@+id/btn_most_speake_notes"
        app:layout_constraintTop_toBottomOf="@+id/btn_most_speake_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>