<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="260dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingVertical="20dp"
    android:background="@drawable/background_border">

    <TextView
        android:id="@+id/tv_delete_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ssp_regular"
        android:gravity="center"
        android:text="@string/you_ready_delete_comment"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/main_color"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        style="@style/SeparateLine"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_account" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        style="@style/button_fill"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/delete"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/button_empty"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>