<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.InformationInRegistrationFragment">

    <TextView
        android:id="@+id/tv_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ssp_semibold"
        android:gravity="center"
        android:text="@string/information"
        android:textColor="@color/secondary_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_avatar"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2">


        <ImageView
            android:id="@+id/iv_avatar"
            android:contentDescription="@string/photo_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:src="@drawable/icon_default_avatar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/photo_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/til_proffesion"
        app:layout_constraintEnd_toEndOf="@+id/til_proffesion"
        app:layout_constraintStart_toStartOf="@+id/til_proffesion" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_proffesion"
        style="@style/TextInputLayoutDrop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:endIconDrawable="@drawable/icon_bird"
        app:endIconTint="@color/secondary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/et_proffesion"
            style="@style/EditTextInTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_do_you_do" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_about_self"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        app:counterTextColor="@color/hint_color"
        app:helperText="(min 80)"
        android:layout_marginTop="15dp"
        app:helperTextTextColor="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_proffesion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_about_self"
            style="@style/EditTextInTIL"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="top"
            android:hint="@string/about_self"
            android:maxLength="200" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/button_fill"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@+id/til_about_self"
        app:layout_constraintStart_toStartOf="@+id/til_about_self"
        app:layout_constraintTop_toBottomOf="@+id/til_about_self" />


</androidx.constraintlayout.widget.ConstraintLayout>