<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    app:layout_scrollEffect="none"
    android:scrollbars="none"
    tools:context=".presentation.main.profile.ProfileSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/rl_change_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/background_change_avatar"
                android:contentDescription="@string/photo_profile"
                android:padding="20dp"
                android:src="@drawable/icon_default_avatar" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_edit" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_change_avatar"
            app:startIconDrawable="@drawable/icon_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login"
                style="@style/EditTextInTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mail"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_login"
            app:layout_constraintStart_toStartOf="@+id/til_login"
            app:layout_constraintTop_toBottomOf="@+id/til_login"
            app:startIconDrawable="@drawable/icon_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mail"
                style="@style/EditTextInTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mail" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/TextInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_mail"
            app:layout_constraintStart_toStartOf="@+id/til_mail"
            app:layout_constraintTop_toBottomOf="@+id/til_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/EditTextInTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/TextInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                style="@style/EditTextInTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_about_me"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/til_login"
            app:layout_constraintStart_toStartOf="@+id/til_login"
            app:layout_constraintTop_toBottomOf="@+id/til_confirm_password"
            app:startIconDrawable="@drawable/icon_about_me">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_about_me"
                style="@style/EditTextInTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about_self"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/button_fill"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="Применить"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/til_about_me"
            app:layout_constraintStart_toStartOf="@+id/til_about_me"
            app:layout_constraintTop_toBottomOf="@+id/til_about_me" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>